观察者模式

--- a/src/main/resources/readme
+++ b/src/main/resources/readme
@@ -242,6 +242,12 @@
             3.2 注意点：位置需要往后传， 在paint里面this.x = go.x  this.y = go.y
             3.3 GODecorator聚合一个GameObject
 
+    20220307
+        Observer    事件处理模型  一般和责任链模式一起使用
+        定义一个接口，子类去实现它
+        1.观察者只和事件打交道，不会和事件源打交道，这样观察者就和事件源解耦合了
+        2.事件类，会有一个source属性
+
 
 
 
