--- a/src/main/resources/readme
+++ b/src/main/resources/readme
@@ -248,6 +248,14 @@
         1.观察者只和事件打交道，不会和事件源打交道，这样观察者就和事件源解耦合了
         2.事件类，会有一个source属性
 
+    20220310
+        1.在很多系统中，observer模式往往和责任链共同负责对于事件的处理，其中的某一个observer负责是否将事件进一步传递
+        2.当你按下fire事件，做对应的处理
+            2.1 一个观察者 TankFireObserver
+            2.2 事件 TankFireEvent 里面是tank,有getSource方法
+            2.3 具体事件处理类 TankFireHandler 从TankFireObserver实现，具体的fire()动作
+            2.4 在坦克类增加很多的TankFireEvent  当按键时，坦克会发出这个时间，然后挨着遍历每一个observer，目前只有一个，让她处理时间。现在简单的处理就是拿到原对象，让它去fire
+
 
 
 
