--- a/src/main/resources/readme
+++ b/src/main/resources/readme
@@ -261,6 +261,11 @@
 
         4.享元模式  使用同一个，不在new 新的
 
+    20220314
+        1.git push
+            1.1 git push <远程主机名> <本地分支名>:<远程分支名>
+                1.1.1 如果本地分支名与远程分支名相同，则可以省略冒号：git push <远程主机名> <本地分支名>
+
 
 
 
