tank存盘load盘 memento和序列化

--- a/src/main/resources/readme
+++ b/src/main/resources/readme
@@ -355,3 +355,16 @@
         4.桥接模式   bridge模式  用聚合代替继承      两个维度的发展   抽象类自己实现一支，实现类自己实现一支，但是在抽象类里面聚合一个具体实现。相互不影响，也不会造成类爆炸
 
 
+    20220328
+        1.protoType 原型模式
+            1.1 要想使用clone()方法，类必须实现 Cloneable接口 要想复制一个类，第一步需要实现Cloneable接口，第二步需要重写clone方法
+
+
+    20220329
+        1.memento和序列化
+            1.1 实现坦克位置的存盘以及读盘
+                1.1.0 按下s键时保存此时坦克的位置，l键回到上一次保存的位置
+                    1.1.0.1 流记得要close()
+                1.1.1 当一个对象要序列化时，它所引用的对象也需要序列化，要不然汇报异常
+                1.1.2 也可以使用 transient（透明） 关键词，这样序列化不会报错，但load不回来
+
