--- a/src/main/resources/readme
+++ b/src/main/resources/readme
@@ -367,4 +367,19 @@
                     1.1.0.1 流记得要close()
                 1.1.1 当一个对象要序列化时，它所引用的对象也需要序列化，要不然汇报异常
                 1.1.2 也可以使用 transient（透明） 关键词，这样序列化不会报错，但load不回来
+                1.1.3 还要一个最简单的方法实现序列化，GameObject 实现序列化，但是这样就不能演示 先写哪个，先拿哪个的演示
+
+        2.templateMethod 模板方法（钩子函数）   父类定义了方法，子类具体实现，
+        3.state 模式
+            3.1 把状态抽象出来，   abstract MMState 里面有三个抽象方法，子类MMState,具体根据状态，调用具体的子类。
+            3.1 有限状态机（FSM)
+
+
+
+    20220330
+        1.intepreter解释器
+
+
+    20220401
+        网络编程    烦点：异常处理、正确关闭->线程的正常结束
 
