--- a/src/main/resources/readme
+++ b/src/main/resources/readme
@@ -388,4 +388,6 @@
 
     20220419
         git 查看远程分支    git branch -r
+    20220420
+        git push <远程主机名> <本地分支名>:<远程分支名>   如果本地分支名和远程分支名一样 简写  git push <远程主机名> <远程分支名>
 
